Separated files. Addded script, particles, menu.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <script type="text/javascript" src="js/camera.js"></script>
 <script type="text/javascript" src="js/gameState.js"></script>
 <script type="text/javascript" src="js/GameStateStack.js"></script>
+<script type="text/javascript" src="js/Bitmap.js"></script>
+<script type="text/javascript" src="js/player.js"></script>
+<script type="text/javascript" src="js/map.js"></script>
+<script type="text/javascript" src="js/entity.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
